--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <p class="card-text text-center text-info mt-3">
             <small class="text-muted">
-                CLIQUE NA FOTO OU NOME DO SEU REPRESENTANTE PARA VOTAR!
+                clique na foto ou nome do representante para realizar seu voto!
             </small>
         </p>
 
